--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,76 @@
-.header {
-    background-color: #E0E0E0;
+body {
+    margin: 0px;
+    font-family: 'latoregular';
+}
+
+
+/*mudar para max depois*/
+
+@media (max-width: 576px) {
+    .header {
+        background-color: #E0E0E0;
+        display: flex;
+        height: 100px;
+    }
+    #header-title--span {
+        font-size: 32px;
+    }
+    .header-menu--item {
+        display: block;
+        color: #FFFFFF;
+        background-color: #333333;
+        height: 100%;
+        width: 75%;
+        text-align: right;
+    }
+    .form {
+        display: flex;
+        flex-flow: column;
+    }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1900px)  {
+    .headerbg{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        height: 30%;
+        background-color: #E0E0E0;
+    }
+    .bodybg{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+    .header ,.body {
+        display: flex;
+        align-items: center;
+        width: 1100px;
+        justify-content: space-between;
+    }
+    #header-menu--buttom-hamburguer,#header-menu--buttom-fechar{
+        display: none;
+    }
+    .header-icon img{
+        width: auto;
+        height: 50px;
+        padding: 5px;
+    }
+    .header-menu--item{
+        background-color: #FFFFFF;
+        display: flex;
+        flex-direction: row;
+    }
+    
+    .header-menu--buttom{
+        margin: 5px 0 5px 0;
+        padding: 0px 10px 0 10px;
+        border-right-style: solid;
+        border-color: #979797;
+    }
+    #header-menu--buttom-salvar{
+         border: none;
+    }
+
+
 }
