--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,10 +43,14 @@ body {
         display: flex;
         justify-content: center;
     }
+
+
     .header ,.body {
+        width: 1100px;
+    }
+    .header {
         display: flex;
         align-items: center;
-        width: 1100px;
         justify-content: space-between;
     }
     #header-menu--buttom-hamburguer,#header-menu--buttom-fechar{
@@ -75,13 +79,18 @@ body {
 
 
 
-
+    .body{
+        margin: 20px 0 0 0;
+        padding: 10px;
+        display: flex;
+    }
 
     .form{
         border: solid;
         border-width: 1px;
         border-radius: 5px;
         padding: 10px;
+        width: 50%;
     }
 
 
