--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ body {
 
 /*mudar para max depois*/
 
-@media (max-width: 576px) {
+@media screen and (min-width: 0px) and (max-width: 731px) {
     
     .header {
         background-color: #E0E0E0;
@@ -30,7 +30,67 @@ body {
     }
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1900px)  {
+@media screen and (min-width: 732px) and (max-width: 1024px){
+/*Header e Body*/
+.headerbg{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 30%;
+    background-color: #E0E0E0;
+}
+.bodybg{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+.header ,.body {
+    width: 1100px;
+    font-size: 14px;
+}
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.body{
+    margin: 20px 0 0 0;
+    padding: 10px;
+    display: flex;
+}
+#header-menu--buttom-hamburguer,#header-menu--buttom-fechar{
+    display: none;
+}
+.header-icon-title img{
+    width: auto;
+    height: 50px;
+    padding: 5px;
+}
+.header-icon-title{
+    display: flex;
+    align-items: center;
+}
+
+
+.header-menu--item{
+    background-color: #FFFFFF;
+    display: flex;
+    flex-direction: row;
+}
+.header-menu--buttom{
+    margin: 5px 0 5px 0;
+    padding: 0px 10px 0 10px;
+    border-right-style: solid;
+    border-color: #979797;
+}
+#header-menu--buttom-salvar{
+     border: none;
+}
+
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1900px)  {
     /*Header e Body*/
     .headerbg{
         display: flex;
